Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -3,6 +3,6 @@
   <head></head>
   <body>
     <h1>Today</h1>
-    <p>The date is <%= Time.wday%>, </p>
+    <p>The date is <%= Date.today.strftime(%%>, </p>
   </body>
 </html>
