Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -3,6 +3,6 @@
   <head></head>
   <body>
     <h1>Today</h1>
-    <p>The date is <%= Date.today.strftime(%A, %B, %>, </p>
+    <p>The date is <%= Date.today.strftime(%A, %B, %e, %>, </p>
   </body>
 </html>
