--- a/views/date.erb
+++ b/views/date.erb
@@ -5,6 +5,6 @@ require 'date'
   <head></head>
   <body>
     <h1>Today</h1>
-    <p>The date is <%= Date.today.strftime(%A, %B, %d, %Y) %></p>
+    <p> The date is <%= Date.today.strftime("%A, %B %d, %Y") %></p>
   </body>
 </html>
